<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/profile"
        android:title="@string/perfil"
        android:icon="@drawable/baseline_person_24"
        app:showAsAction="ifRoom" />

    <!---<item
        android:id="@+id/action_settings"
        android:title="@string/ajustes"
        android:icon="@drawable/baseline_manage_accounts_24"
        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/night_mode"
        android:title="@string/night"
        android:icon="@drawable/day_night"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:title="@string/acerca_de"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/cerrar_sesion"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="ifRoom" />


</menu>
