<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titulo_tarea_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_tarea"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:layout_constraintVertical_bias="0.045" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titulo_text_field"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:hint="@string/titulo_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tarea_label" />

    <TextView
        android:id="@+id/descripcion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/descripcion"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_text_field" />

    <EditText
        android:id="@+id/description_task"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:hint="@string/descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_label" />


    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/due_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_task"
        />

    <EditText
        android:id="@+id/dd"
        android:layout_width="344dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:inputType="none"
        android:hint="@string/dd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_date"/>

    <TextView
        android:id="@+id/prioridad_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/prioridad"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dd"
        />



    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="220dp"
        android:layout_height="146dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioridad_label">

        <RadioButton
            android:id="@+id/prioridad_alta_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alta" />

        <RadioButton
            android:id="@+id/prioridad_media_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/media" />

        <RadioButton
            android:id="@+id/prioridad_baja_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baja" />
    </RadioGroup>

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_gestion"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/agregar_tarea_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/agregar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.123" />



    <ImageView
        android:id="@+id/image_sun"
        android:layout_width="113dp"
        android:layout_height="124dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/sun_image_desc"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/agregar_tarea_bt"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>


