<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_tarea"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/titulo_tarea_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_tarea"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titulo_tarea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/titulo_hint"
        android:layout_marginTop="15dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tarea_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_titulo" />

    <ImageButton
        android:id="@+id/btn_edit_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@+id/titulo_tarea"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Campo Descripción -->
    <TextView
        android:id="@+id/descripcion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tarea"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/description_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/descripcion"
        android:layout_marginTop="15dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_descripcion" />

    <ImageButton
        android:id="@+id/btn_edit_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="@+id/description_task"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <!-- Campo Fecha -->
    <TextView
        android:id="@+id/due_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/description_task"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/dd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:focusable="false"
        android:hint="@string/dd"
        android:layout_marginTop="15dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/due_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_due_date" />

    <ImageButton
        android:id="@+id/btn_edit_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="@+id/dd"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <!-- Prioridad -->
    <TextView
        android:id="@+id/prioridad_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prioridad"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dd"
        app:layout_constraintStart_toStartOf="parent"
         />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/prioridad_label"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:id="@+id/prioridad_alta_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alta" />

        <RadioButton
            android:id="@+id/prioridad_media_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media" />

        <RadioButton
            android:id="@+id/prioridad_baja_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baja" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/btn_edit_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        app:layout_constraintTop_toBottomOf="@id/radioGroup2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
