<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/user_details"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.092" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/te_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Juan Pérez"
        android:enabled="false"
        android:background="@android:color/transparent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editIconUser"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/editIconUser"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_edit"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/te_user"
        app:layout_constraintBottom_toBottomOf="@id/te_user"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/te_user"
        app:layout_constraintStart_toStartOf="parent"
       />

    <EditText
        android:id="@+id/te_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="juan.perez@example.com"
        android:enabled="false"
        android:background="@android:color/transparent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editIconEmail"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/editIconEmail"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="@id/te_email"
        app:layout_constraintBottom_toBottomOf="@id/te_email"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/te_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/te_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="JuanP"
        android:enabled="false"
        android:background="@android:color/transparent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editIconName"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/editIconName"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="@id/te_name"
        app:layout_constraintBottom_toBottomOf="@id/te_name"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/te_name"
        app:layout_constraintStart_toStartOf="parent"
         />

    <EditText
        android:id="@+id/te_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="12345678"
        android:enabled="false"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editIconPass"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/editIconPass"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="@id/te_pass"
        app:layout_constraintBottom_toBottomOf="@id/te_pass"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        app:layout_constraintTop_toBottomOf="@id/te_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
